# board-game-server

./: .gitignore  Cargo.toml  Procfile  README.md  Trunk.toml
.github/workflows/: pages.yml  release.yml  rust.yml
client/: Cargo.toml
client/src/: main.rs
games/: Cargo.toml
server/src/: games.rs  main.rs
server/src/games/: tic_tac_toe.rs
src/: games.rs  main.rs
src/client/: bin.rs
src/common/: lib.rs  tic_tac_toe.rs
src/games/: tic_tac_toe.rs
src/server/: bin.rs  games.rs
src/server/games/: tic_tac_toe.rs
tls/: renew-key.sh
web/: Cargo.toml  index.html
web/src/: app.rs  main.rs
web/src/app/: style.rs  worker.rs
