[package]
name = "board-games"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/bin.rs"

[[bin]]
name = "client"
path = "src/client/bin.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tungstenite = "0.17"

[features]
