[package]
name = "board-games"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/bin.rs"
required-features = ["native"]

[[bin]]
name = "client"
path = "src/client/bin.rs"
required-features = ["native"]

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tungstenite = { version = "0.17", features = ["native-tls"], optional = true }
native-tls = { version = "0.2", optional = true }

[features]
native = ["native-tls", "tungstenite"]
