# ideally we can move this config to the root Cargo.toml
# but we need to wait for Trunk to be updated to recognise
# different Cargo options, i.e. specifying the binary

[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
board-games = { path = ".." }
egui = "0.19.0"
eframe = "0.19.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

# wasm specific dependencies
tracing-wasm = "0.2"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm
