# ideally we can move this config to the root Cargo.toml
# but we need to wait for Trunk to be updated to recognise
# different Cargo options, i.e. specifying the binary

[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
board-games = { path = ".." }
egui = "0.19.0"
egui_extras = "0.19.0"
eframe = "0.19.0"

# wasm specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
gloo-net = { version = "0.2", features = ["websocket"] }
gloo-timers = { version = "0.2", features = ["futures"] }


[profile.release]
opt-level = 2 # fast and small wasm
